# Capstone

./: .gitignore  ARCHITECTURE.md  LICENSE  PROGRESS.md  hpema_config.yaml  requirements.txt
backend/: API_GUIDE.md  config.py  main.py
backend/api/: __init__.py  dependencies.py
backend/api/routers/: audit.py  generation.py  health.py  pipeline.py
backend/api/schemas/: __init__.py  agents.py  audit.py  generation.py  pipeline.py
backend/arc/: Readme.md  llm.py  my_key.txt  pyproject.toml
backend/core/: errors.py  settings.py
backend/data/: database.py
backend/services/: __init__.py  feedback.py  generation_service.py  orchestrator.py
backend/services/agents/: actor.py  base.py  checker.py  policy.py
backend/services/audit/: logger.py  traceability.py
backend/services/llm/: client.py  model_registry.py
backend/services/llm/prompts/: actor.txt  checker.txt  policy.txt
backend/services/rag/: knowledge_graph.py  retriever.py
backend/services/verification/: dafny_runner.py  sandbox.py
cli/: config.py  display.py  main.py
dashboard/: app.py
data/standards/Boeing_SDP/: design_practices.md
data/standards/DO_178C/: coding_rules.md  objectives.md
data/standards/MISRA_C/: rules.md
data/standards/NASA/: nasa_std_8739.md
ml/: ARCHITECTURE.md  DIRECTORY_GUIDE.md  MODELS.md
ml/slurm/: serve_models.sh
tests/unit/: test_audit.py  test_config.py  test_feedback.py  test_schemas.py
